--- a/GET_files/form.html
+++ b/GET_files/form.html
@@ -6,7 +6,8 @@
 
 <p>You can fill out this form to make a POST request.</p>
 
-<form method="post" enctype="multipart/form-data" action="/">
+<!-- <form method="post" enctype="multipart/form-data" action="/"> -->
+  <form method="post" action="/">
   <label for="name">Name:</label>
   <input name="name" type="text"><br>
   <label for="comment">Comment:</label>
