--- a/ErrorPage/Error400.html
+++ b/ErrorPage/Error400.html
@@ -123,7 +123,7 @@ body {
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-">
-				<h3>Oops! Page not found</h3>
+				<h3>Oops! Bad Request</h3>
 				<h1><span>4</span><span>0</span><span>0</span></h1>
 			</div>
 			<h2>we are sorry, but the page you requested was not found</h2>
