--- a/ErrorPage/Error201.html
+++ b/ErrorPage/Error201.html
@@ -123,10 +123,10 @@ body {
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-">
-				<h3>HTTP Response Status Code</h3>
-				<h1><span>2</span><span>0</span><span>1</span></h1>
+				<!-- <h3>HTTP Response Status Code</h3> -->
+				<h1><span>C</span><span>r</span><span>e</span><span>a</span><span>t</span><span>e</span><span>d</span></h1>
 			</div>
-			<h2>Geated</h2>
+			<!-- <h2>Created</h2> -->
 		</div>
 	</div>
 
