--- a/GET_files/index.html
+++ b/GET_files/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head>
 <title>Example Page</title>
 </head><body>
@@ -6,9 +7,11 @@
 
 <p>This page is only an example.</p>
 
-<p>Click <a href="page2.html">here</a> to see another page,
-or click <a href="test.txt">here</a> to download a text file.</p>
-
+<p><a href="GET_files/video.mp4">video</a></p>
+<p><a href="GET_files/nide_toph.jpeg">Monster trio</a></p>
+<p><a href="GET_files/test.txt">text</a></p>
+<p><a href="GET_files/smile.png">smily face</a></p>
+<p><a href="scripts/program.py">text</a></p>
 
 <!-- <img src="nide_toph.jpeg"/> -->
 <!-- <video src="video.mp4">vid</video> -->
